--- a/css/fui.css
+++ b/css/fui.css
@@ -36,6 +36,9 @@
 .align-center {
   align-items: center;
 }
+.justify-content {
+  justify-content: center;
+}
 
 .d-grid {
   display: grid;
@@ -143,11 +146,17 @@
 /*? End Color */
 
 /** start padding margin */
+.p-5 {
+  padding: 5px;
+}
 .p-10 {
   padding: 10px;
 }
 .p-20 {
   padding: 20px;
+}
+.m-0 {
+  margin: 0;
 }
 .mt-0 {
   margin-top: 10px;
@@ -166,6 +175,15 @@
 }
 .ml-10 {
   margin-left: 10px;
+}
+.ml-15 {
+  margin-left: 15px;
+}
+.ml-20 {
+  margin-left: 20px;
+}
+.ml-30 {
+  margin-left: 30px;
 }
 .mr-10 {
   margin-right: 10px;
@@ -237,6 +255,9 @@
 }
 .fs-10 {
   font-size: 10px;
+}
+.fs-12 {
+  font-size: 12px;
 }
 .fs-14 {
   font-size: 14px;
